--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Welcome to AccioJob</title>
+    <style>
+        body {
+            background-color: #f2f2f2;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 100px;
+        }
+        
+        h1 {
+            color: #336699;
+            font-size: 36px;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Welcome to Accio Jobs!</h1>
 </body>
-
 </html>
