--- a/main.html
+++ b/main.html
@@ -2,19 +2,7 @@
 <html>
 <head>
     <title>Welcome to AccioJob</title>
-    <style>
-        body {
-            background-color: #f2f2f2;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding-top: 100px;
-        }
-        
-        h1 {
-            color: #336699;
-            font-size: 36px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <h1>Welcome to Accio Jobs!</h1>
